--- a/bazaar/contact.html
+++ b/bazaar/contact.html
@@ -97,10 +97,10 @@
                 <form name="submit-to-google-sheet">
                   <div class="app-form-group">
                     <input type="text" class="app-form-control" name="name" 
-                    placeholder="NAME" required>
+                    placeholder="Name" required>
                     <input type="email" class="app-form-control" name="Email" placeholder="Enter Your Email" required>
-                    <input type"number" class="app-form-control" name="number" placeholder="CONTACT NO" required>
-                    <input type="text" class="app-form-control" name="message" placeholder="MESSAGE" required>
+                    <input type"number" class="app-form-control" name="number" placeholder="Contact No" required>
+                    <input type="text" class="app-form-control" name="message" placeholder="Message" required>
                     <div class="button-container">
                         <button class="app-form-button">Submit</button></div>
                   </div>
